--- a/package.json
+++ b/package.json
@@ -4,28 +4,25 @@
   "main": "gulpfile.js",
   "keywords": [
     "gulp",
-    "pug",
-    "sass",
     "vue",
     "webpack"
   ],
-  "author": "ekzm",
+  "author": "masato-ohira",
   "scripts": {
     "dev": "gulp",
     "build": "gulp build",
-    "git": "git add . && git commit -a -m 'auto commit'"
+    "git": "git add . && git commit -a -m 'auto commit'",
+    "ghpage": "push-dir --dir=public_html --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "bulma": "^0.7.1",
     "csvtojson": "^2.0.3",
     "document-register-element": "^1.8.1",
     "jquery": "3.1.1",
-    "loaders.css": "^0.1.2",
+    "push-dir": "^0.4.1",
     "sugar": "^2.0.4",
     "vue": "^2.5.16",
     "vue-custom-element": "^3.0.3",
-    "vue-lazyload": "^1.2.3",
-    "vue-notification": "^1.3.10",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
